tests/NormalTests/paczka1/fuzzy1/63804746.err
Error in line 29: qeUfvHf6tek A276 53,0
Error in line 9: BWZTJ S544 80,2
Error in line 35: NokPWV S544 111,4
